kubernetes/apps/default/hister/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hister-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hister
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: embedder
            io.kubernetes.pod.namespace: ai
